tests/ui/self/arbitrary-self-from-method-substs.feature.stderr
error[E0308]: mismatched types
  --> $DIR/arbitrary-self-from-method-substs.rs:16:5
   |
LL |     foo.get::<&Foo>();
   |     ^^^ expected `&Foo`, found `Foo`
   |
   = note: this error occurred while resolving the `self` type of this method call

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
